--- a/product.css
+++ b/product.css
@@ -44,6 +44,12 @@ img.part {
   max-width: 100%;
 }
 
+img.stamp {
+  max-width: 50%;
+  display: block;
+  margin-bottom: 1rem;
+}
+
 @media (max-width: 768px) {
   .not-mobile {
       display: none;
